Fixed visible level counter in singleplayer

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -665,6 +665,8 @@ body {
         z-index: 499;
         top: 100px;
         left: 70px;
+        line-height:15px;
+        
         img {
           margin-bottom: 6px;
         }
@@ -674,7 +676,8 @@ body {
         .score {
           font-family: 'eboyregalpha';
           font-size: 60px;
-          line-height: 75%;
+          font-weight:normal;
+          line-height:51px;
         }
       }
 
